# fekthor

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml
apps/fekthor-macos/: project.yml
apps/fekthor-macos/Fekthor/: ContentView.swift  ConversionModel.swift  EditCanvasView.swift  FekthorApp.swift  Info.plist
crates/fekthor-cli/: Cargo.toml
crates/fekthor-cli/src/: main.rs
crates/fekthor-core/: Cargo.toml
crates/fekthor-core/src/: color.rs  compare.rs  contour.rs  document.rs  geom.rs  lib.rs  mask.rs  raster.rs  render.rs  shapes.rs  skeleton.rs  svg.rs
docs/: AI.md  ARCHITECTURE.md  DECISIONS.md  DOCUMENT-MODEL.md  FEATURES.md  IMPLEMENTATION-STATUS.md  PRIVACY-SECURITY.md  PRODUCT.md  RESEARCH.md  ROADMAP.md  TESTING.md  UX.md  VECTORIZATION-PIPELINE.md
docs/plans/: 01-quality-metrics.md  02-geometry-refinement.md  03-strokes.md  04-shapes.md  05-gradient.md  06-auto-mode.md  07-flatten.md  08-editor-p0.md  README.md
swift/FekthorKit/: Package.swift
swift/FekthorKit/Sources/FekthorKit/: AutoMode.swift  AutoTune.swift  CGPathBuilder.swift  Color.swift  Compare.swift  ComponentMerge.swift  Contour.swift  DistanceTransform.swift  Document.swift  Editing.swift  Enhance.swift  EnvelopeBuilder.swift  Fekthor.swift  Geometry.swift  Gradient.swift  GradientFit.swift  GradientRegions.swift  Mask.swift  Model2.swift  Model2Bridge.swift  ModelStore.swift  OklabColor.swift  PaletteFamily.swift  PathBuilder.swift  PathRefine.swift  PlanarMap.swift  Preprocess.swift  PrimitiveDetect.swift  Quality.swift  RasterImage.swift  (+13 more)
(+25 files in other folders)
