[workspace]
resolver = "2"
members = [
    "crates/fekthor-core",
    "crates/fekthor-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
repository = "https://github.com/silvandiepen/fekthor"

[workspace.dependencies]
image = "0.25"
imageproc = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11"
anyhow = "1"

[profile.release]
opt-level = 3
