[package]
name = "fekthor-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic raster-to-vector engine for Fekthor."

[dependencies]
image.workspace = true
imageproc.workspace = true
serde.workspace = true
serde_json.workspace = true
resvg.workspace = true
usvg.workspace = true
tiny-skia.workspace = true
